--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -15,15 +15,16 @@ nav, div, body{
 #header {
     width: 100%;
     padding : 15px;
-    height : 100px;
+    height : auto;
     border : 2px solid black;
 }
 
 #center{
     width: 100%;
-    height : 650px;
+    height : auto;
     border : 2px solid blue;
-    padding : 15px;
+    padding-top : 15px;
+    padding-bottom : 15px;
 }
 
 #footer {
