--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -1,33 +1,35 @@
 @font-face {
-    font-family: "MyFont";
-    src: url('MyFont.ttf');
+  font-family: "MyFont";
+  src: url("MyFont.ttf");
 }
 
 @font-face {
-    font-family: "MyFont2";
-    src: url('MyFont2.ttf');
+  font-family: "MyFont2";
+  src: url("MyFont2.ttf");
 }
 
-nav, div, body{
-    font-family: "MyFont";
+nav,
+div,
+body {
+  font-family: "MyFont";
 }
 
 #header {
-    width: 100%;
-    padding : 15px;
-    height : 100px;
-    border : 2px solid black;
+  width: 100%;
+
+  height: auto;
+  border: 2px solid black;
 }
 
-#center{
-    width: 100%;
-    height : 650px;
-    border : 2px solid blue;
-    padding : 15px;
+#center {
+  width: 100%;
+  height: auto;
+  border: 2px solid blue;
+  padding: 15px;
 }
 
 #footer {
-    width : 100%;
-    height : auto;
-    border : 2px solid black;
+  width: 100%;
+  height: auto;
+  border: 2px solid black;
 }
