--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -21,9 +21,9 @@ nav, div, body{
 
 #center{
     width: 100%;
-    height : 650px;
+    height : auto;
     border : 2px solid blue;
-    padding : 15px;
+    padding : 15px 0;
 }
 
 #footer {
