--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -1,17 +1,9 @@
-@font-face {
-  font-family: "MyFont";
-  src: url("MyFont.ttf");
-}
-/*  */
-@font-face {
-  font-family: "MyFont2";
-  src: url("MyFont2.ttf");
-}
 
 nav,
 div,
 body {
   font-family: "MyFont";
+
 }
 
 #header {
@@ -33,3 +25,27 @@ body {
   height: auto;
   border: 2px solid black;
 }
+
+ /* 폰트 설정구간임 */
+ 
+ @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Jersey+10&display=swap');
+ 
+ 
+
+ .concert-one-regular {
+    font-family: "Concert One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+
+  @font-face {
+    font-family: "MyFont";
+    src: url("MyFont.ttf");
+  }
+ 
+  @font-face {
+    font-family: "MyFont2";
+    src: url("MyFont2.ttf");
+  }
+  
