--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -1,14 +1,11 @@
-
 nav,
 div,
 body {
   font-family: "MyFont";
-
 }
 
 #header {
   width: 100%;
-
   height: auto;
   border: 2px solid black;
 }
@@ -26,26 +23,22 @@ body {
   border: 2px solid black;
 }
 
- /* 폰트 설정구간임 */
- 
- @import url('https://fonts.googleapis.com/css2?family=Concert+One&family=Jersey+10&display=swap');
- 
- 
+/* 폰트 설정구간임 */
 
- .concert-one-regular {
-    font-family: "Concert One", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
+@import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Jersey+10&display=swap");
 
-  @font-face {
-    font-family: "MyFont";
-    src: url("MyFont.ttf");
-  }
- 
-  @font-face {
-    font-family: "MyFont2";
-    src: url("MyFont2.ttf");
-  }
-  
+.concert-one-regular {
+  font-family: "Concert One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "MyFont";
+  src: url("MyFont.ttf");
+}
+
+@font-face {
+  font-family: "MyFont2";
+  src: url("MyFont2.ttf");
+}
