--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -26,6 +26,7 @@ body {
 /* 폰트 설정구간임 */
 
 @import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Jersey+10&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 .concert-one-regular {
   font-family: "Concert One", sans-serif;
