--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -67,3 +67,7 @@ body {
   max-width: 100%; /* 컨테이너 너비에 맞추어 이미지 너비 조정 */
   height: auto; /* 이미지의 높이를 자동으로 조정하여 비율 유지 */
 }
+
+h1 {
+    font-family: "Myfont2";
+}
