--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -37,11 +37,19 @@ pre {
 
 /* 폰트 설정구간임 */
 
-@import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Jersey+10&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
-.concert-one-regular {
-  font-family: "Concert One", sans-serif;
+/* Start https://www.cursors-4u.com */ 
+* {
+  cursor: url(https://cur.cursors-4u.net/nature/nat-9/nat865.cur), auto !important;
+}
+
+button, a {
+  cursor: pointer !important; /* 버튼과 링크에는 항상 pointer 커서 적용 */
+}
+.noto-serif-kr-regular {
+  font-family: "Noto Serif KR", serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -59,6 +67,10 @@ pre {
 .imgSize {
   max-width: 100%; /* 컨테이너 너비에 맞추어 이미지 너비 조정 */
   height: auto; /* 이미지의 높이를 자동으로 조정하여 비율 유지 */
+}
+
+button {
+  cursor: pointer;
 }
 
 * {
