--- a/project/src/assets/css.css
+++ b/project/src/assets/css.css
@@ -42,7 +42,7 @@ pre {
 
 /* Start https://www.cursors-4u.com */ 
 * {
-  cursor: url(https://cur.cursors-4u.net/nature/nat-9/nat865.cur), auto !important;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=95348), auto !important;
 }
 
 button, a {
